# ai_workshop_demo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-ci.txt
.cursor/rules/: workshops.mdc
.github/workflows/: ci.yml
play/agent_engine/: CHANGELOG.md  DECISIONS.md  DESIGN_DECISIONS.md  JOURNAL.md  README.md  __init__.py  __main__.py  agent.py  anthropic_client.py  artifact.py  callbacks.py  cli.py  config.py  discussion.py  engine.py  events.py  gemini_client.py  memory.py  ollama_client.py  openai_client.py  requirements.txt  result.py  run.py  scenario.py  tracer.py
play/agent_sft/: DECISIONS.md  JOURNAL.md  README.md  requirements.txt
play/evals/: CHANGELOG.md  DECISIONS.md  JOURNAL.md  README.md  TODO.md  __init__.py  _ae_bridge.py  api.py  cli.py  registry.py  requirements.txt  runner.py  storage.py
play/multiagent/: DESIGN_DECISIONS.md  README.md  TODO.md  agent.py  anthropic_client.py  artifact.py  config.py  discussion.py  gemini_client.py  memory.py  ollama_client.py  openai_client.py  run.py  tools.py
play/qa_assets/: README.md  requirements.txt
play/rag/: CHANGELOG.md  DECISIONS.md  DESIGN_DECISIONS.md  JOURNAL.md  README.md  TODO.md  bm25.py  chunker.py  config.py  ingest.py  ollama_embedding.py  prefetch.py  query.py  requirements.txt  reranker.py  tokenizer.py
play/sft_hello/: .gitignore  JOURNAL.md  README.md  infer_compare.py  lora_config.yaml  sweep.py
play/workflow/: CHANGELOG.md  DECISIONS.md  JOURNAL.md  README.md  __init__.py  __main__.py  (+4 more)
refs/: engineering_dimensions.md
stash/: eval_harness_plan.md
(+792 files in other folders)
